--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -131,7 +131,7 @@ body {
 #section2 {
     position: relative;
     overflow-x: hidden;
-    height: 200vh;
+    height: 220vh;
     background: powderblue;
 }
 .section2 {}
@@ -310,167 +310,180 @@ h2.ftitle {
 .chromebox {position: relative;}
 .chromebox .chromewrap {
     position: absolute; top: 64.583vw; left: 6.25vw;
-    width: 46.615vw;
-    height: 28.49vw;
-    background: rgba(255, 99, 71, 0.356);
+    width: 46.563vw;
+    /* height: 28.49vw; */
+    height: 547px;
+    background: #35363A;
     border-radius: 5px;
 }
 .menu-bar {
+    position: relative;
+    font-family: "SF Pro Display";
+    font-weight: 300;
+    font-size: 12px;
     display: flex;
     width: 100%;
-    height: 8%;
+    /* height: 8%; */
+    height: 42px;
     border-radius: 5px 5px 0px 0px;
+    background: #202124;
 }
 .menu-bar .circle-bar {
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
-    width: 12%;
+    box-sizing: border-box;
+    padding: 0 13px;
+    /* padding: 0 0.677vw; */
+    width: 78px;
     height: 100%;
     background: #202124;
     border-radius: 5px 0px 0px 0px;
 }
 .circle-bar .red {
-    width: 0.625vw; height: 0.625vw;
+    margin-right: 8px;
+    width: 12px; height: 12px;
     border-radius: 50%;
     background: #ED6A5F;
 }
 .circle-bar .yellow {
-    width: 0.625vw; height: 0.625vw;
+    margin-right: 8px;
+    width: 12px; height: 12px;
     border-radius: 50%;
     background: #F6BF4F;
 }
 .circle-bar .green {
-    width: 0.625vw; height: 0.625vw;
+    width: 12px; height: 12px;
     border-radius: 50%;
     background: #63C654;
 }
 
 .menu-bar .title-bar {
+    position: absolute; top: 8px; left: 78px;
     display: flex;
-    width: 88%;
-    height: 100%;
+    /* width: 88%; */
+    /* width: 42.5vw; */
+    /* height: 100%; */
+    height: 81%;
     background: #202124;
-    border-radius: 0px 5px 0px 0px;
 }
 .title-bar .htmlTap {
-    width: 25%;
-    background: #35363A;
+    width: 12.5vw;
+    
 }
 .title-bar .htmlTap a {
     display: flex;
     justify-content: center;
-    align-items: center;
+    line-height: 35px;
     width: 100%;
     height: 100%;
     color: #fff;
+    background: #999;
 }
 .title-bar .cssTap {
-    width: 25%;
-    background: #999;
+    width: 12.5vw;
 }
 .title-bar .cssTap a {
     display: flex;
     justify-content: center;
-    align-items: center;
+    line-height: 35px;
     width: 100%;
     height: 100%;
     color: #fff;
+    background: #999;
 }
 .title-bar .scriptTap {
-    width: 25%;
-    background: #999;
+    width: 12.5vw;
 }
 .title-bar .scriptTap a {
     display: flex;
     justify-content: center;
-    align-items: center;
+    line-height: 35px; 
     width: 100%;
     height: 100%;
     color: #fff;
+    background: #999;
+}
+.title-bar .tap a.active {
+    background: #35363A;
 }
 .title-bar > div .code-content {
-    position: absolute; top: 84px; left: 50px;
-    width: 500px; height: 300px;  
+    position: absolute; top: 74px; left: -74px;
+    z-index: 20;
+    /* width: 885px; height: 460px; 원래크기. 반응형때문에 잠시 주석 */
+    width: 46.094vw; height: 460px;
     background: white; 
 }
 
 .menu-content {
+    position: relative;
     width: 100%;
-    height: 92%;
-    border-radius: 0px 0px 5px 5px;
+    box-sizing: border-box;
+    /* border-bottom: 1px solid black; */
 }
 .menu-content .option-bar {
+    font-family: "SF Pro Display";
+    font-weight: 300;
     display: flex;
     width: 100%;
-    height: 8%;
+    /* height: 8%; */
+    height: 36px;
+}
+.arrow-box {
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    box-sizing: border-box;
+    width: 108px;
+    height: 40px;
+    /* background: #35363A; */
 }
 .option-bar .arrowL {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 4%;
-    height: 100%;
-    background: #35363A;
+    width: 14px;
+    margin-right: 18px;
 }
-.option-bar .arrowL svg {
-    width: 13px;
-}
+.option-bar .arrowL svg {}
 .option-bar .arrowR {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 4%;
-    height: 100%;
-    background: #35363A;
+    width: 14px;
+    margin-right: 18px;
 }
-.option-bar .arrowR svg {
-    width: 13px;
-}
+.option-bar .arrowR svg {}
 .option-bar .redo {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 4%;
-    height: 100%;
-    background: #35363A;
+    width: 14px;
 }
-.option-bar .redo svg {
-    width: 13px;
-}
+.option-bar .redo svg {}
+
 .option-bar .address-box {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 84%;
-    height: 100%;
+    /* width: 84%; */
+    width: 742px;
+    height: 40px;
     background: #35363A;
     color: #fff;
 }
 .option-bar .address-box .address {
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 97%;
-    height: 100%;
+    width: 100%;
+    height: 28px;
     background: #202124;
     border-radius: 30px;
+}
+.option-bar .address-box .address span {
+    padding: 0 13px 0 14px;
 }
 .option-bar .dot {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 4%;
+    /* width: 4%; */
+    width: 44px;
     height: 100%;
     background: #35363A;
 }
-.option-bar .dot svg {
-    width: 5px;
+.option-bar .dot .dot-box {
+    width: 4px;
 }
-.menu-content .code {
-    width: 100%;
-    height: 92%;
-    background: red;
-    border-radius: 0px 0px 5px 5px;
-}
+
 
