--- a/port/font/font.css
+++ b/port/font/font.css
@@ -58,4 +58,13 @@
     font-weight: normal;
     font-style: normal;
 }
-
+@font-face{ 
+    font-family: "SF Pro Display";
+    font-weight: 300;
+    src: url(../../site-apple/assets/fonts/SFProDisplay-Light.ttf);
+}
+@font-face{ 
+    font-family: "SF Pro Display";
+    font-weight: 400;
+    src: url(../../site-apple/assets/fonts/SFProDisplay-Medium.ttf);
+}
