--- a/port/css/reset.css
+++ b/port/css/reset.css
@@ -1,5 +1,7 @@
 /* reset */
-body, div, ul, li, ol, dl, dt, h1, h2, h3, h4, h5, h6, input, fieldset, legend, p, select, table, th, td, tr ,textarea, button, form, figure, figcaption {margin: 0; padding: 0;}
+body, div, ul, li, ol, dl, dt, h1, h2, h3, h4, h5,
+ h6, input, fieldset, legend, p, select, table, th, 
+ td, tr ,textarea, button, form, figure, figcaption, pre {margin: 0; padding: 0;}
 a {color: #000; text-decoration: none;}
 a:hover { color: #000;}
 body, input, textarea, select, button, table { 
