--- a/port/font/font.css
+++ b/port/font/font.css
@@ -1,4 +1,4 @@
-/* korea */
+korea
 @font-face {
     font-family: 'S-CoreDream-9Black';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-9Black.woff')
