--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -632,7 +632,7 @@ h2.ftitle2 {
     font-size: 1.302vw;
     margin-bottom: 0.823vw;
 }
-.left-desc-wrap .left-desc ul .desc-desc2 {
+.right-desc-wrap .right-desc ul .desc-desc2 {
     font-family: 'S-CoreDream-3Light';
     font-size: 0.781vw;
     line-height: 1.563vw;
