--- a/mouse/prism.css
+++ b/mouse/prism.css
@@ -228,7 +228,7 @@ pre[class*="language-"].line-numbers > code {
 			padding-right: 0.8em;
 			text-align: right;
 		}
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 10px;  /* 세로축 스크롤바 길이 */
     height: 10px;  /* 가로축 스크롤바 길이 */
 }
@@ -243,5 +243,5 @@ pre[class*="language-"].line-numbers > code {
     background-color: black;
 }
 ::-webkit-resizer {
-    background-color: green; */
+    background-color: green;
 }
