--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -1359,7 +1359,8 @@ h2.ftitle2 {
 /* section6 */
 #section6 {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
+    height: 5000px;
     /* background: blue; */
 }
 .section6 {
@@ -1415,5 +1416,28 @@ h2.ftitle2 {
     0% {left: -5580px;}
     100% {left: 0px;}
 }
+
+.ani-box {
+    position: absolute; top: 0; left: 0;
+    width: 100%; height: 100vh;
+    
+}
+.ani-wrap {
+    position: relative; top: 320px; left: 510px;
+    width: 9000px; height: 300px;
+    overflow: hidden; 
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-evenly;
+}
+.ani-wrap > div {
+    float: left;
+    color: #fff;
+    width: 500px; height: 300px;
+}
+.ani-wrap > div:nth-child(1) {background: #000;}
+.ani-wrap > div:nth-child(2) {background: #333;}
+.ani-wrap > div:nth-child(3) {background: #555;}
+.ani-wrap > div:nth-child(4) {background: #777;}
 
 
