--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -32,9 +32,10 @@ body {
     background: #1b1b1b;
 }
 #section6 {}
-.dasf {
+#section7 {
     position: relative;
     z-index: 1000;
+    background: #1b1b1b;
 }
 /* cursor */
 .cursor {
@@ -268,6 +269,9 @@ h2.ftitle {
 }
 .s2-circleAll:hover {
     color: #fff;
+    background: #12DA97;
+}
+.s2-circleAll.active2 {
     background: #12DA97;
 }
 .circle-wrap1 {
@@ -600,6 +604,9 @@ h2.ftitle {
     color: #fff;
     background: #7a2415;
 }
+.s3-circleAll.active3 {
+    background: #7a2415;
+}
 .s3-circle-w1 {width: 7.1vw; height: 7.1vw;}
 .s3-circle-w2 {
     width: 6.5vw; height: 6.5vw;
@@ -745,6 +752,9 @@ h2.ftitle2 {
 }
 .s4-circleAll {
     transition: background .2s;
+}
+.s4-circleAll.active4 {
+    background: #72652e;
 }
 .s4-circleAll:hover {
     color: #fff;
@@ -1091,6 +1101,9 @@ h2.ftitle2 {
     color: #fff;
     background: #0d5cd1;
 }
+.s5-circleAll.active5 {
+    background: #0d5cd1;
+}
 .s5-circle-w1 {
     position: absolute; top: 67vw; right: 62vw;
     width: 7.4vw; height: 7.4vw;
@@ -1252,7 +1265,7 @@ h2.ftitle2 {
     z-index: 20;
     /* width: 885px; height: 460px; 원래크기. 반응형때문에 잠시 주석 */
     width: 46.094vw; height: 460px;
-    background: #242320;
+    background: #202124;
     overflow: auto;
 }
 
@@ -1533,12 +1546,91 @@ h2.ftitle2 {
     left: 47px; bottom: 27px;
     z-index: 500;
 }
-/* .dasf {
-    width: 100%;
-    height: 5000px;
-    background: red;
-} */
 .boxAll iframe {
     position: absolute; top: 50%; left: 50%;
     transform: translate(-50%, -50%);
+}
+
+/* section7 */
+#section7 {
+    width: 100%;
+    height: 500vh;
+}
+.parallax {
+    position: relative;
+    height: 100vh;
+}
+.scriptview-wrap {
+    margin-left: 638px;
+    width: 1208px; height: 727px;
+    padding: 16.5px 17px;
+    background: #1b1b1b;
+    box-sizing: border-box;
+    border: 1px solid #424242;
+    border-radius: 15px;
+}
+.view-box {
+    width: 1174px; height: 694px;
+}
+.script-text {
+    font-family: 'Ilisarniq-Black';
+    position: absolute;
+    top: 34%; left:10%;
+}
+.script-text h2 {
+    font-size: 200px;
+    color: #fff;
+    text-transform: uppercase;
+}
+.script-text h3 {
+    margin-top: -30px;
+    margin-left: 17px;
+    font-size: 36px;
+    color: #fff;
+    text-transform: uppercase;
+}
+.script-text p {
+    margin-left: 17px;
+    font-family: 'S-CoreDream-3Light';
+    width: 651px;
+    font-size: 18px;
+    color: #fff;
+    letter-spacing: 0.5px;
+}
+.script-btn {
+    position: absolute;
+    bottom: 8%; left: 36%;
+}
+.script-btn a {
+    display: inline-block;
+    font-family: 'Ilisarniq-Regular';
+    font-size: 14px;
+    width: 60px; height: 60px;
+    margin-right: 68px;
+    text-align: center;
+    line-height: 60px;
+    border-radius: 50%;
+    border: 1px solid #424242;
+    color: #fff;
+}
+.script-btn a:last-child {
+    margin-right: 0;
+}
+.script-num .snum1 {
+    position: absolute;
+    top: 48px; left: 34px;
+    font-family: 'Ilisarniq-Black';
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: 5px;
+    transform: rotate(90deg);
+}
+.script-num .snum2 {
+    position: absolute;
+    bottom: 48px; left: 34px;
+    font-family: 'Ilisarniq-Black';
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: 5px;
+    transform: rotate(-90deg);
 }
