--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -1554,14 +1554,16 @@ h2.ftitle2 {
 /* section7 */
 #section7 {
     width: 100%;
-    height: 500vh;
+    height: 360vh;
 }
 .parallax {
     position: relative;
     height: 100vh;
+    background: powderblue;
 }
 .scriptview-wrap {
-    margin-left: 638px;
+    /* margin-left: 638px; */
+    position: absolute; left: 638px;
     width: 1208px; height: 727px;
     padding: 16.5px 17px;
     background: #1b1b1b;
@@ -1572,10 +1574,14 @@ h2.ftitle2 {
 .view-box {
     width: 1174px; height: 694px;
 }
+.view-box .iframe {
+    width: 100%; height: 100%;
+}
 .script-text {
     font-family: 'Ilisarniq-Black';
     position: absolute;
-    top: 34%; left:10%;
+    top: 34%; left: 10%;
+    transition: all 1s;
 }
 .script-text h2 {
     font-size: 200px;
@@ -1599,7 +1605,7 @@ h2.ftitle2 {
 }
 .script-btn {
     position: absolute;
-    bottom: 8%; left: 36%;
+    bottom: 8%; left: 39%;
 }
 .script-btn a {
     display: inline-block;
@@ -1612,9 +1618,30 @@ h2.ftitle2 {
     border-radius: 50%;
     border: 1px solid #424242;
     color: #fff;
+    transition: background .2s;
+}
+.script-btn a.btnactive {
+    background: #424242;
+}
+.script-btn a:hover {
+    background: #424242;
 }
 .script-btn a:last-child {
     margin-right: 0;
+}
+.script-btn a:nth-child(even) {
+    animation: scriptbtnmove1 5s linear infinite;
+}
+@keyframes scriptbtnmove1 {
+    0%{transform: rotate(0);}
+    100%{transform: rotate(360deg);}
+}
+.script-btn a:nth-child(odd) {
+    animation: scriptbtnmove2 8s linear infinite;
+}
+@keyframes scriptbtnmove2 {
+    0%{transform: rotate(0);}
+    100%{transform: rotate(-360deg);}
 }
 .script-num .snum1 {
     position: absolute;
