--- a/port/css/prism.css
+++ b/port/css/prism.css
@@ -170,9 +170,6 @@ pre[class*="language-"].line-numbers > code {
 	width: 10px;  /* 세로축 스크롤바 길이 */
 	height: 10px; /* 가로축 스크롤바 길이 */
 }
-.code-content::-webkit-scrollbar-track {
-	background-color: lightblue;
-}
 .code-content::-webkit-scrollbar-track-piece {
 	background-color: #202124;
 }
@@ -180,16 +177,13 @@ pre[class*="language-"].line-numbers > code {
 	border-radius: 8px;
 	background-color: black;
 }
-.code-content::-webkit-resizer {
-	background-color: green;
+.code-content::-webkit-scrollbar-corner {
+	background-color: #202124;
 }
 
 .code-content2::-webkit-scrollbar {
 	width: 10px;  /* 세로축 스크롤바 길이 */
 	height: 10px; /* 가로축 스크롤바 길이 */
-}
-.code-content2::-webkit-scrollbar-track {
-	background-color: lightblue;
 }
 .code-content2::-webkit-scrollbar-track-piece {
 	background-color: #202124;
@@ -198,6 +192,6 @@ pre[class*="language-"].line-numbers > code {
 	border-radius: 8px;
 	background-color: black;
 }
-.code-content2::-webkit-resizer {
-	background-color: green;
+.code-content2::-webkit-scrollbar-corner {
+	background-color: #202124;
 }
